--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <input type="file" id="fileInput" accept="YouTube">
         <div class="result" id="result">
             <p>Chưa có dữ liệu. Hãy chọn file <strong>YouTube</strong>.</p>
+            <br>
+            Làm thế nào để tôi xem recap?<a href="#how-to-rv-recap" id="myLink"> Nhấn vào đây.</a>
         </div>
         <hr>
         <h2>Chúng tôi sẽ cập nhật xu hướng năm 2025 vào tháng 12, hãy đón chờ!</h2>
@@ -54,5 +56,9 @@
 
     <!-- overlay container, filled when celebration triggers -->
     <div id="overlay" class="overlay" aria-hidden="true"></div>
+
+    <div class="help-popup">
+        Hello
+    </div>
 </body>
 </html>
