--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="result" id="result">
             <p>Chưa có dữ liệu. Hãy chọn file <strong>YouTube</strong>.</p>
             <br>
-            Làm thế nào để tôi xem recap?<a href="#how-to-rv-recap" id="myLink"> Nhấn vào đây.</a>
+            Làm thế nào để tôi xem recap?<a href="README.md" id="myLink"> Nhấn vào đây.</a>
         </div>
         <hr>
         <h2>Chúng tôi sẽ cập nhật xu hướng năm 2025 vào tháng 12, hãy đón chờ!</h2>
@@ -56,9 +56,5 @@
 
     <!-- overlay container, filled when celebration triggers -->
     <div id="overlay" class="overlay" aria-hidden="true"></div>
-
-    <div class="help-popup">
-        Hello
-    </div>
 </body>
 </html>
